modifier la page de reservation realiser la tache de reservation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,3 +111,11 @@ a {
 .border-danger {
     border-color: #8C1638!important;
 }
+
+.card-button {
+    text-decoration: none !important;
+}
+
+.btn-reserv {
+    border: none !important;
+}
